--- a/PD Manager/PD Manager/PD Manager.vcxproj
+++ b/PD Manager/PD Manager/PD Manager.vcxproj
@@ -184,6 +184,7 @@
       <SDLCheck>true</SDLCheck>
       <DebugInformationFormat>OldStyle</DebugInformationFormat>
       <StringPooling>true</StringPooling>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -219,6 +220,7 @@
     <ClInclude Include="peridynamic\pd_serialize_in.hxx" />
     <ClInclude Include="peridynamic\pd_serialize_out.hxx" />
     <ClInclude Include="peridynamic\pd_solver_bbpd.hxx" />
+    <ClInclude Include="peridynamic\pd_solver_beampd.hxx" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
